@@ -388,6 +388,8 @@
 #define IDC_PHYSICAL_LAYOUT             1251
 #define IDC_BUTTON2                     1251
 #define IDC_ENABLE                      1251
+#define IDC_CHECK1                      1253
+#define IDC_ENABLESTAGE2                1253
 #define ID_MAINWND_PROCESSTL            2001
 #define ID_MAINWND_SERVICELV            2002
 #define ID_MAINWND_NETWORKLV            2003
@@ -590,7 +592,6 @@
 #define ID_FILTER_REGEX_CASEINSENSITIVE 40221
 #define ID_VIEW_PAUSE                   40222
 #define ID_TAB_NEXT                     40223
-#define ID_PREV_TAB                     40224
 #define ID_TAB_PREV                     40224
 #define IDDYNAMIC                       50000
 
@@ -600,7 +601,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        186
 #define _APS_NEXT_COMMAND_VALUE         40226
-#define _APS_NEXT_CONTROL_VALUE         1252
+#define _APS_NEXT_CONTROL_VALUE         1254
 #define _APS_NEXT_SYMED_VALUE           127
 #endif
 #endif
