@@ -128,6 +128,10 @@ pre {
       
       <dt>Replace Task Manager with Process Hacker</dt>
       <dd>If enabled, any attempt to start Task Manager will start Process Hacker instead.</dd>
+      
+      <dt>Check images for digital signatures and packing</dt>
+      <dd>(Recommended) If enabled, Process Hacker will check process images for digital signatures 
+      and determine whether they are packed. Note that this may cause internet access on some systems.</dd>
     </dl>
     
     <h2>Symbols</h2>
